2002-10-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Dist): Fix the distcleancheck_listfiles example.
	Reported by Karl Berry.

2002-10-31  Akim Demaille  <akim@epita.fr>

	* tests/location.test (Makefile.am): Strengthen.
	* lib/Automake/Channels.pm (_print_message): Be sure to flush
	$partial when the message is output.
	Thanks to Alexandre Duret-Lutz.

2002-10-31  Akim Demaille  <akim@epita.fr>

	* automake.in (&read_am_file): Use $last_where to register the
	_first_ line of a variable definition as location instead of the
	last one.
	(&conditional_ambiguous_p): Don't forget to ->string the
	Conditionals.
	(&rule_define): Likewise.
	* tests/location.test: Adjust to exercise this.

2002-10-25  Charles Wilson  <cwilson@ece.gatech.edu>

	* tests/defs.in: Add explicit stanza for python -V.

2002-10-16  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/ansi6.test, tests/ansi7.test: Set ac_cv_prog_cc_stdc instead
	of am_cv_prog_cc_stdc.  This follows Akim's patch of 2002-10-09,
	and reveals a bug in my patch of 2002-10-15.
	* automake.in (handle_single_transform_list): Strip directory name
	from $full_ansi if subdir-objects is not set.

	* lib/texinfo.tex: New version from Texinfo 4.2b.

2002-10-15  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_single_transform_list) <full_ansi>: New variable.
	Use this to record correct dependencies about deansifiable files which
	are using per-program flags or are in a subdirectory.
	* tests/ansi9.test: New file.
	* tests/Makefile.am (TESTS): Add ansi9.test.
	Reported by Paul D. Smith

2002-10-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (ac_defun_rx, ac_require_rx): If the macro name is
	quoted, accept any character but `]'.  This makes it possible
	to define macros such as `AC_LANG_PREPROC(Fortran 90)'.
	(scan_m4_files): Quote $key in the regex.  Don't define $expr, it's
	not used.
	(add_file, scan_file): Adjust to the new definitions of $ac_defun_rx
	and $ac_require_rx.