@@ -6112,12 +6112,14 @@ sub conditional_ambiguous_p ($$@)
 	}
       elsif ($vcond->true_when ($cond))
 	{
-	  return ("$var was already defined in condition $vcond, "
+	  return ("$var was already defined in condition "
+		  . $vcond->string . ", "
 		  . "which implies condition ". $cond->string, $vcond);
 	}
       elsif ($cond->true_when ($vcond))
 	{
-	  return ("$var was already defined in condition $vcond, "
+	  return ("$var was already defined in condition "
+		  . $vcond->string . ", "
 		   . "which is implied by condition " . $cond->string, $vcond);
 	}
     }
