@@ -1,3 +1,8 @@
+2002-11-06  Akim Demaille  <akim@epita.fr>
+
+	* automake.in (&conditional_ambiguous_p): Don't forget to ->string
+	the Conditionals.
+
 2002-10-31  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.texi (Dist): Fix the distcleancheck_listfiles example.
